Stop Couter button name fixed

--- a/timer.html
+++ b/timer.html
@@ -12,7 +12,7 @@
 
     <p id="demo">5</p>
     <button onclick="myTimerObj.start()">Start Counter</button>
-    <button onclick="myTimerObj.end()">St</button>
+    <button onclick="myTimerObj.end()">Stop Counter</button>
 
     <script language="javascript" src="timer.js"></script>
   </body>
